# MedScheduler

./: .dockerignore  .gitignore  CMakeLists.txt  LICENSE  MedScheduler  MedScheduler.pro  MedSchedulerEnvironment.postman_environment.json  README.md  add_doctor.cpp  add_doctor.hpp  add_hospital.cpp  add_hospital.hpp  add_junior_admin.cpp  add_junior_admin.hpp  add_record_slot.cpp  add_record_slot.hpp  auth.cpp  auth.hpp  changelock.md  create_tables.sql  database.cpp  database.hpp  database_instructions.md  display_doctors.cpp  display_doctors.hpp  display_hospitals.cpp  display_hospitals.hpp  display_users.cpp  display_users.hpp  doctor_hospital_management.cpp  doctor_hospital_management.hpp  doctor_menu.cpp  doctor_menu.hpp  doctor_schedule.cpp  doctor_schedule.hpp  doctorwindow.h  handlers.cpp  handlers.hpp  homepage.cpp  homepage.ui  (+49 more)
.github/workflows/: frontend.yml  server.yml
MEDSC/: .gitignore  README.md  strange_file.md
MEDSC/server+database/: Dockerfile.db  Dockerfile.server  docker-compose.yml
QtApp/: MedScheduler.pro
QtApp/forms/: appointment.ui  (+4 more)
backend/: .gitignore  Dockerfile.server  docker-compose.yml
desktop-client/: .gitignore
forms/: doctorwindow.ui  homepage.ui  senioradminwindow.ui
frontend/: .gitignore  Dockerfile  README.md  next.config.mjs  package-lock.json  package.json
http-server-cpp-branch-for-Vika/: README.md
include/: homepage.h  junioradminwindow.h  registrationwindow.h  utils.h
server+database/: .dockerignor  .dockerignore  .gitignor  .gitignore  00-init-cron.sql  30-expire_waitlisters.sql  40-notify_about_record.sql  50-notify_waitlist.sql  CMakeCache.txt  CMakeLists.txt  Dockerfile.db  Dockerfile.server  Makefile  README.md  boost_api_server  clean_old_data.sql  cmake_install.cmake  create_tables.sql  docker-compose.yml  expiry_job.sql  how_it_works.md  how_to_do_something_for_GruVik.md  how_to_launch_code.md
src/: doctorwindow.cpp  homepage.cpp  junioradminwindow.cpp  senioradminwindow.cpp  utils.cpp
(+478 files in other folders)
